Estou criando um mini blog para meu colegio

--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="style.css">
-    <title>Luis é feio</title>
+    <title>CEDAX</title>
 </head>
 <body>
-    <header>
-        <h1>Teste de site</h1>
+<header>
+        <h1>CEDAX</h1> <br>
+        <p>Colégio Estadual Doutor Adino Xavier</p>
         
-    </header>
-        <nav>
-            <a href="https://youtu.be/ivCY3Ec4iaU?si=m4TUkpHB098fYWtb" target="_blank">Home</a>
-            <a href="pag002.html ">Help</a>
-        </nav>
+</header>
     <main>
         <aside>
-            <h2>Esse é um site de exemplo</h2>
+            <section>
+                <div id="conteudo">
+                   <h2>Sobre Nós</h2>
+                   <p id="p1"> 
+                    Fundado com o objetivo de oferecer educação de qualidade e formar cidadãos críticos e preparados para o futuro, o Colégio Estadual Doutor Adino Xavier é uma instituição localizada em São Gonçalo, Rio de Janeiro. Nossa escola busca proporcionar uma educação inclusiva e transformadora, promovendo o desenvolvimento integral dos nossos alunos.
+                   </p>
+                   <p>
+                    Com um corpo docente qualificado e dedicado, nosso colégio se destaca pela promoção de valores como respeito, responsabilidade e cidadania. Além do ensino tradicional, também incentivamos nossos estudantes a explorar novas áreas do conhecimento e a desenvolver habilidades essenciais para o mundo moderno, como o pensamento crítico e a tecnologia.
+                   </p>
+                </div>
+            </section>
         </aside>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti labore sed esse atque non ipsa ad deleniti veniam aperiam odio voluptatibus nam tempora, dicta aliquam adipisci nisi quos est exercitationem! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero necessitatibus tempore repudiandae dolores molestias, placeat inventore accusantium nihil pariatur officiis eligendi ut vero debitis! Iste magni totam ipsa delectus tempora!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, veritatis atque facere eaque soluta hic dolorem! Fugit ut a tempora, eius quos quasi. Saepe assumenda libero, ea id repudiandae nostrum.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae unde veniam fuga ipsam excepturi reprehenderit, aliquid veritatis odit magnam recusandae magni illum molestias rerum beatae accusantium odio voluptate culpa corrupti.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel provident quo autem ad voluptatibus? Corporis, optio. Voluptatum, distinctio, exercitationem aliquid omnis blanditiis numquam, neque atque amet autem temporibus assumenda dolor? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, doloribus in deserunt accusantium maiores, cumque cupiditate neque fugit, facere recusandae vitae? At sit nemo minus et ut, labore delectus quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur atque amet quas repudiandae ratione repellat facere quae quis nihil sit asperiores aperiam cupiditate ea assumenda animi adipisci sint, provident et!
-        </p>
     </main>
+<footer>
+
+</footer>
 
 </body>
 </html>
