--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-        <h1>CEDAX</h1> <br>
+        <h1><strong>CEDAX</strong></h1> <br>
         <p>Colégio Estadual Doutor Adino Xavier</p>
         
 </header>
@@ -24,12 +24,22 @@
                    <p>
                     Com um corpo docente qualificado e dedicado, nosso colégio se destaca pela promoção de valores como respeito, responsabilidade e cidadania. Além do ensino tradicional, também incentivamos nossos estudantes a explorar novas áreas do conhecimento e a desenvolver habilidades essenciais para o mundo moderno, como o pensamento crítico e a tecnologia.
                    </p>
+                   <p>
+                    A missão do Colégio Estadual Doutor Adino Xavier é oferecer uma educação de excelência, que prepare nossos alunos não apenas para os desafios acadêmicos, mas também para serem protagonistas em suas vidas pessoais e profissionais. Acreditamos no poder da educação como ferramenta de transformação social, capaz de criar oportunidades e promover ig
+                    </p>
+                    <p>
+                    Localizado no coração de São Gonçalo, nosso colégio possui uma infraestrutura adequada para garantir o melhor aprendizado dos nossos alunos. As salas de aula são espaçosas e bem equipadas, e contamos com laboratórios de informática e ciências, além de uma biblioteca ampla para o suporte dos estudos.
+                    </p>
+                    <p>
+                    Estamos comprometidos em formar estudantes preparados para o futuro, com uma visão ampla sobre o mundo e suas diversas oportunidades. Queremos que nossos alunos desenvolvam a capacidade de inovar e colaborar em uma sociedade cada vez mais globalizada e digital.
+                    </p>
+
                 </div>
             </section>
         </aside>
     </main>
 <footer>
-
+    <p>© 2024 Colégio Estadual Doutor Adino Xavier. Todos os direitos reservados.</p>
 </footer>
 
 </body>
